# SugarSyncLog

./: .gitignore  CMakeLists.txt  README.md
example/: CMakeLists.txt  SugarSyncLogExample.cpp
include/: LogTracker.h  LogTrackerLevel.h  MessageType.h  SugarSyncLog.h  SugarSyncLogManager.h
src/: CMakeLists.txt  LogManager.cpp  LogManager.h  LogTracker.cpp  SugarFileLogger.cpp  SugarSyncLog.cpp  SugarSyncLogManager.cpp  test.cpp
src/common/: API.h  FormatHelper.cpp  FormatHelper.h  FormatHelper.hpp  LogLevel.h  LogTarget.h  LoggerType.h  MessageType.h  StringHelper.h
src/logger/: FileLogger.cpp  FileLogger.h  Logger.cpp  Logger.h
